--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>html site</h1>
+<div class="box">
+    <div class="login">
+        <div class="loginbx">
+            
+        </div>
+    </div>
+</div>
 </body>
 </html>
