--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="box">
     <div class="login">
-        <div class="loginbx">
+        <div class="loginBx">
             
         </div>
     </div>
