--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Index</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Index</title>
 </head>
 <body>
 <div class="box">
     <div class="login">
         <div class="loginBx">
-            
+            <h2><i class="fa-solid fa-right-to-bracket"></i> Login <i class="fa-solid fa-heart"></i></h2>
+            <input type="text" placeholder="Username">
+            <input type="password" name="password" id="password" placeholder="password">
+            <input type="submit" value="Sign In">
+            <div class="group">
+                <a href="#">Forgot Password</a>
+                <a href="#">Sign Up</a>
+            </div>
         </div>
     </div>
 </div>
